# Telegram-Bot-EnglishPractice

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/handlers/: general.py
src/handlers/call_handler/: general_call.py
src/secrets/: main.env
src/variables/: questions.py
